--- a/style.css
+++ b/style.css
@@ -1,41 +1,46 @@
 :root{
-    --cor-fundo: #01080E;
-    --cor-principal: #0B0D20;
-    --cor-secundaria: #212333;
-    --cor-destaque: #2bdeFD;
-    --cor-texto: #D7F9FF;
-}
+    --cor-fundo:#01080E;
+    --cor-principal:#d83a77;
+    --cor-secundária:#212333;
+    --cor-destaque:#2BDEFD;
+    --cor-texto:#D7F9FF;
+   }
 
-body{ background-color: var(--cor-fundo);
-color: var(--cor-texto);
-display: flex;
-justify-content: center;
-align-itens: center;
-min-height: 100vh;
-}
+   body{
+    background-color: var(--cor-fundo);
+    color: var(--cor-texto);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+   }
 
-.caixa-principal{
-background-color: var(--cor-principal);
-width: 90%;
-max-width: 600px;
-text-align: center;
-padding: 20px;
-}
+   .caixa-principal{
+    background-color: var(--cor-principal);
+    width: 90%;
+    max-width: 600px;
+    text-align: center;
+    padding: 20px;
+   }
 
-h1{
+   h1{
     color: var(--cor-destaque);
-}
+   }
 
-.caixa-perguntas{
-padding-botton: 10px;
-}
+   .caixa-perguntas{
+    padding-bottom: 10px;
+   }
 
-button{
-    background-color: var(--cor-secu:root{
-        --cor-fundo: #01080E;
-        --cor-principal: #0B0D20;
-        --cor-secundaria: #212333;
-        --cor-destaque: #2bdeFD;
-        --cor-texto: #D7F9FF;
-    }
-    
+   button{
+    background-color: var(--cor-secundária);
+    color: var(--cor-texto);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: background-color 0.3s;
+   }
+   button:hover{
+    background-color: var(--cor-destaque);
+    color: var(--cor-principal);
+   }
+   
