--- a/style.css
+++ b/style.css
@@ -1,46 +1,45 @@
 :root{
-    --cor-fundo:#01080E;
-    --cor-principal:#d83a77;
-    --cor-secundária:#212333;
-    --cor-destaque:#2BDEFD;
-    --cor-texto:#D7F9FF;
-   }
+    --cor-fundo: #fcfcfc;
+    --cor-principal: #000000 ;
+    --cor-secundaria: #a51313;
+    --cor-destaque: #ff0404;
+    --cor-texto: #ffffff;
+}
 
-   body{
+body{
     background-color: var(--cor-fundo);
     color: var(--cor-texto);
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-   }
+}
 
-   .caixa-principal{
+.caixa-principal{
     background-color: var(--cor-principal);
     width: 90%;
     max-width: 600px;
     text-align: center;
     padding: 20px;
-   }
+}
 
-   h1{
+h1{
     color: var(--cor-destaque);
-   }
+}
 
-   .caixa-perguntas{
+.caixa-perguntas{
     padding-bottom: 10px;
-   }
+}
 
-   button{
-    background-color: var(--cor-secundária);
+button{
+    background-color: var(--cor-secundaria);
     color: var(--cor-texto);
     border: none;
     border-radius: 15px;
     padding: 15px;
     transition: background-color 0.3s;
-   }
-   button:hover{
+}
+button:hover{
     background-color: var(--cor-destaque);
     color: var(--cor-principal);
-   }
-   
+}
